--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.90.7",
-    "@wagmi/connectors": "^6.1.3",
+    "@wagmi/connectors": "^5.9.9",
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "recharts": "^3.3.0",
-    "viem": "^2.38.6",
-    "wagmi": "^2.19.2"
+    "viem": "^2.36.0",
+    "wagmi": "^2.16.9"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -27,5 +27,10 @@
     "eslint-config-next": "16.0.1",
     "tailwindcss": "^4",
     "typescript": "^5"
+  },
+  "pnpm": {
+    "overrides": {
+      "@wagmi/core": "2.20.3"
+    }
   }
 }
